[CHORE] Fix Sonar reported issues